--- a/fern/docs/pages/get-started/support.mdx
+++ b/fern/docs/pages/get-started/support.mdx
@@ -1,4 +1,36 @@
 ---
 title: Support plans 
-subtitle: How to run jambonz
+subtitle: Let us help you get the most out of jambonz
 ---
+
+If you're intending to deploy a self-hosted jambonz system, it is no doubt going to play a critical role in the success of your business. 
+It makes sense to team up with the people that built 
+the platform and know it best.  
+
+Let us - the experts - help you design, deploy, tune and mainain your jambonz platform.  Email us 
+with your needs at support@jambonz.org to get a quote.
+
+<Success>
+jambonz is largely funded by support plan revenue. Customers on paid support plans receive access to 
+additional private repositories, knowledge articles, and devops scripts that are not available to the general public.
+</Success>
+
+## Benefits of a support plan
+
+As a customer on a paid support plan, you will receive the following benefits:
+- **Design and deployment assistance**:  We will work with you to design a system that meets your needs, and then help you deploy it.
+- **Turn-up and testing**:  We will assist you in turning up your system and testing it to ensure it meets your requirements.
+- **Ongoing support and maintenance**:  We will provide ongoing support and maintenance for your system,
+including applying latest jambonz software updates and prioritizing your bug fixes.
+- **Access to private repositories**:  You will receive access to private repositories containing devops scripts and other tools that 
+are not available to the general community.
+- **Private Slack channel**: You will have a private Slack channel to work with the jambonz team one-on-one on a realtime basis.
+- **Early access to new releases**: Our newest jambonz releases are rolled out to our paid support customers first.
+
+We provide three levels of support plans, each designed to meet the needs of different types of customers.
+- **single system support**: for customers deploying a single jambonz server
+- **cluster support**: for customers deploying a scalable jambonz cluster
+- **enterprise support**: for customers with large, complex deployments who would like intense commitment of time and resources
+from the jambonz teams, including involvement in customer interops and accelerated feature development.
+
+Please contact us at support@jambonz.org for more information on our support plans.
