--- a/fern/docs/pages/get-started/deployment.mdx
+++ b/fern/docs/pages/get-started/deployment.mdx
@@ -5,12 +5,21 @@ subtitle: Cloud vs Self-hosted
 
 The simplest way to get started with jambonz is to create an account on our [cloud platform](https://jambonz.cloud). 
 This is a fully managed service that allows you to start building jambonz applications in minutes. 
-You can sign up for a free 3-week trial and convert to a paid plan at any time.
+You can sign up for a free 3-week trial and convert to a paid plan at any time.  
 
-Many customers, however, prefer to self host jambonz on their own cloud or infrastructure. 
+<Success>
+Even for new customers that want to self-host, we recommend starting with the cloud platform to get a feel for the
+platform and build and test some simple apps.  This will help you understand the platform and the
+capabilities of the system before you deploy it in your own environment.
+</Success>
+
+Many customers, however, prefer to self host jambonz on their own cloud or infrastructure for reasons of 
+privacy, security, control, or performance.
 For those customers interested in self-hosting, please review our [paid support plans](), where 
 the jambonz team will work with you to design, deploy, turn up and test your system and provide 
-ongoing support and maintenance.  The jambonz project is largely funded by our support services, 
+ongoing support and maintenance.
+
+The jambonz project is largely funded by our support services, 
 and our related devops scripts and deployment expertise are made available only to paid support customers.
 
 ## Self-hosted deployment options
@@ -35,7 +44,7 @@ is a great choice for a development or staging environment, PoCs, or small produ
 A jambonz medium cluster is a horizontally scalable deployment that should be used if you project needing
 to handle up to 3,000 concurrent calls.  It would consist of
 - 1 (or more) SBCs
-- 1 web / mmonitoring server
+- 1 web / monitoring server
 - 1 or more feature servers in an horizontally scalable cluster.
 
 Each SBC will be able to handle 1,500 concurrent calls, and each feature server will generally be able 
@@ -73,5 +82,6 @@ which provide many of the same benefits of an easily recreatable and manageble d
 
 Under our paid support plans, we help customers deploy on their preferred hosting provider.  We have experience 
 deploying on AWS, Azure, Google Cloud, OVH, Hetzner, and many others as well as bare metal deployments. 
+
 We provide scripts (e.g. Terraform, Cloudformation, packer etc) to automate the deployment process for you and 
 we train your team in how to properly manage jambonz deployments on your chosen provider.
