fixing broken links

--- a/fern/docs/pages/get-started/concepts.mdx
+++ b/fern/docs/pages/get-started/concepts.mdx
@@ -48,7 +48,7 @@ When an incoming call arrives, jambonz routes the call to a user application bas
 the dialed number or the incoming SIP trunk.  The application responds with a set of verbs (like the 
 [gather](/verbs/verbs/gather) verb shown above) that provide instructions to jambonz on how to handle the call.
 
-jambonz also provides a [REST API](xs/reference/introduction) that allows developers to generate outbound dialing campaigns, modify a call 
+jambonz also provides a [REST API](/reference/introduction) that allows developers to generate outbound dialing campaigns, modify a call 
 in progress, or configure any aspect of the provisioned service.
 
 The list of things you can do with jambonz is extensive, and includes:
