--- a/fern/docs/pages/sdks/nodered.mdx
+++ b/fern/docs/pages/sdks/nodered.mdx
@@ -21,7 +21,7 @@ Configure the webhook in node by specifying the URL path and HTTP method that sh
 
 There is no configuration needed for the webhook out node.
 
-Most of the remaining nodes match up one to one to the [jambonz verbs](/docs/webhooks/overview).  Drag them out on the canvas, configure them and connect them in the ordered flow you want to achieve.
+Most of the remaining nodes match up one to one to the [jambonz verbs](/verbs/verbs/overview).  Drag them out on the canvas, configure them and connect them in the ordered flow you want to achieve.
 
 ![Node-RED webhook-say](../../assets/images/node-red-webhook-in.png)
 
